Fixed record table scrollbar not displaying

--- a/hearthstone-leaderboard-ui/src/Components/Dashboard/Board/Dashboard.module.css
+++ b/hearthstone-leaderboard-ui/src/Components/Dashboard/Board/Dashboard.module.css
@@ -19,6 +19,7 @@
     grid-template-rows: 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 1em;
+    flex-grow: 1;
 }
 
 .visualizer-grid {
